codename-html5/app/styles/less/elements/dropdown.less
.dropdown {

    overflow: hidden;
    max-height: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    right: 0;
    min-width: 350px;
    
    list-style-type: none;

    
    transition: opacity .15s ease-in-out 0s, max-height .01s linear .2s;
  
    padding:0;
    margin: 0;
    

    
    &.main-nav-dropdown {
        top:(@globalNavHeight - 10);
        padding: 10px;
        right: -10px;
        &:before {
            content: '';
            width: 0;
            height: 0;
            border-style: solid;
            border-width: 0 10px 10px 10px;
            border-color: transparent transparent @bgrLight transparent;
            position: absolute;
            top: 0px;
            right: 25px;
        }
        ul {
            margin: 0;
            padding: 0;
        }
    }
    .dropdown-items{
        .boxShadow();
        margin: 0;
        padding: 0;
    }
    .dropdown-item {
            position: relative;
        background-color: @bgrLight;
        border-bottom: 1px solid @borders;
        height: @dropdownItemHeight;
        &.user-profile {
            height: 180px;
            .user-avatar-big {
                display: inline-block;
                width: 160px;
                .user-profile-image {
                    display: inline-block;
                    width: 125px;
                    height: 180px;
                    margin-right: 10px;
                    position: absolute;
                    top: 0px;
                    z-index: 10;
                    left: 20px;
                 }
                
                .user-profile-image-brd  {
                    display: inline-block;
                    width: 127px;
                    height: 182px;
                    margin-right: 10px;
                    position: absolute;
                    top: -1px;
                    z-index: 0;
                    left: 19px;
                    .hexagon-inner-2 {
                        background-color: @borders;
                    }
                 }
                       
                 
            }
            
            .user-avatar-text {
                display: inline-block;
                width: 190px;
                font-size: 20px;
                color: @textDark;
                .profile-button {
                    line-height: 20px;
                }
                .profile-user-name {
                    line-height: 1.3em;
                    padding-bottom: 10px;
                    margin-top: 48px;
                }
            }
        }
        .dropdown-link {
            display: inline-block;
            height: @dropdownItemHeight;
            line-height: @dropdownItemHeight;
            font-size: @dropdowFontSize;
            font-weight: @dropdownFontWeight;
            width: 100%;
            box-sizing: border-box;
            padding: 0 (@padding/2);
            color: @textGray;
            &:hover {
                color: darken(@link, 10%);
                text-decoration: none;
            }
            
            .fa {
                margin: 0 10px 0 0;
                opacity: .5;
                font-size: 1.2em;
            }
            
        }
        &.active {
            .dropdown-link {
                color: @borders ;     
            }
        }
        
        &.inbox-messages {
            max-height: (@inboxDropDownHeight + (@inboxMessageHeight - 10) + 60);
            height: auto;
            font-size: @fontSize;
            line-height: @lineHeight;
        }
    }
    
}

li:hover {
    .dropdown {
        opacity: 1;
        max-height: 1000px;
        transition: opacity .25s ease-in-out .1s, max-height 0.01s linear 0.01s;
    }
}

.option-button {
    .dropdown {
        z-index: 50;
        border: 1px solid @borders;
        box-shadow: none;
        min-width: 150px;
        width: auto;
        .dropdown-item {
            border-bottom: none;
            height: @optButtonItemHeight;
            .dropdown-link {
                height: @optButtonItemHeight;
                line-height: @optButtonItemHeight;
                padding: 0 @padding 0 (@padding/2);
                white-space: nowrap;
                &:hover {
                    color: @textGray;
                    background-color: @bgr;
                }
            }
        }
    }
}

